syntax = "proto3";

package project.v1.user;

import "project/v1/common/common.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package           = "helloworld/api/project/v1/user;userv1";
option java_multiple_files  = true;
option java_package         = "dev.kratos.api.user.v1";
option java_outer_classname = "UserProtoV1";

// --------------------------
// 服务定义
// --------------------------

service User {
    rpc Register(RegisterReq) returns (RegisterResp) {
        option (google.api.http) = {
            post: "/api/v1/user/register"
            body: "*"
        };
    }
    rpc Login(LoginReq) returns (LoginResp) {
        option (google.api.http) = {
            post: "/api/v1/user/login"
            body: "*"
        };
    }
    rpc Logout(LogoutReq) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/api/v1/user/{user_id}/logout"
            body: "*"
        };
    }
}

message RegisterReq {
    string username    = 1;
    string password    = 2;
    string email       = 3;
    string verify_code = 4;
}

message RegisterResp {
    common.CommonResp common_resp   = 1;
    string access_token = 2;
}

message LoginReq {
    string username = 1;
    string password = 2;
}

message LoginResp {
    common.CommonResp common_resp   = 1;
    string access_token = 2;
}

message LogoutReq {
    string user_id = 1;
}

message UserInfo {
    string user_id = 1;
    string username = 2;
    string email = 3;
    bool is_admin = 4;
    string create_time = 5;
    string update_time = 6;
}
